# iWantWidgetsNG

./: .gitignore  CMakeLists.txt  PCH.h  README.md  plugin.cpp  vcpkg.json
Papyrus/Scripts/Source/: iwant_widgets.psc  iwant_widgets_native.psc
SKSE/Plugins/: IWantWidgetsNative.ini
include/: IWWConfig.h  IWWFunctions.h  IWWPapyrus.h  IWWSpinlock.h
src/: IWWConfig.cpp  IWWFunctions.cpp  IWWPapyrus.cpp
